Update formatting for link for PDF

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,20 +80,20 @@ h1 {
 
 .main__hero a:link {
   color: rgb(179, 217, 255);
-  font-size: 1.25em;
+  font-size: 1.2em;
   text-decoration: none;
 }
 
 .main__hero a:visited {
   color: rgb(179, 217, 255);
-  font-size: 1.25em;
+  font-size: 1.2em;
   text-decoration: none;
 }
 
 .main__hero a:hover {
   color: #FFFAF0;
-  font-size: 1.25em;
-  text-decoration: underline;
+  font-size: 1.2em;
+  text-decoration: none;
 }
 
 
